src/stylus/blocks/_header.styl
.header
  position relative
  &__video
    width 100%
    height 70rem
    object-fit: cover
  &__content
    display flex
    flex-direction: column
    justify-content: center
    position absolute
    top 0
    left 0
    width 100%
    height 100%
    background-color: rgba(#0B161D, 0.8)
  &__title
    font-family: "Raleway"
    font-size: 4.6rem
    color white
    text-align center
    margin-bottom 3.2rem
    &_blue
      color #60C3FE
  &__text
    font-family: 'Open Sans'
    font-size: 1.6rem
    color white
    text-align center
    line-height: 2.8rem
  &__contact
    display flex
    justify-content: center
    align-items: center
    padding-top 4.2rem
  &__icon
    margin-right 1.4rem
    vertical-align: bottom
    & svg
      height 2.3rem
      vertical-align: bottom
  &__phone
    font-family: 'OPen Sans'
    font-size: 2.4rem
    font-weight: 700
    color white
    margin-right 7.5rem

